<resources>
    <string name="app_name">MemoryMastermind</string>
    <string name="about">About</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">Pressed: -</string>
    <string name="go">Go</string>
    <string name="additional_text">Additional Text:</string>
    <string name="score_0">Score: 0</string>
    <string name="aa">A</string>
    <string name="bb">B</string>
    <string name="cc">C</string>
    <string name="dd">D</string>
    <string name="ee">E</string>
    <string name="ff">F</string>
    <string name="presseds">Pressed: -</string>
    <string name="goo">Go</string>
    <string name="pressede">pressed</string>
    <string name="welcome_to_memorymastermind">Welcome to MemoryMasterMind</string>
</resources>