<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Buttons A, B, C, D, E, F in a 3x2 grid -->

    <Button
        android:id="@+id/buttonA"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/a"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/buttonD"
        app:layout_constraintEnd_toStartOf="@id/buttonB"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/b"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/buttonA"
        app:layout_constraintEnd_toStartOf="@id/buttonC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonE"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="4dp" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/c"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/buttonB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonF"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="4dp"/>

    <Button
        android:id="@+id/buttonD"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/d"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/buttonE"
        app:layout_constraintTop_toBottomOf="@id/buttonA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="290dp"/>

    <Button
        android:id="@+id/buttonE"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/e"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/buttonD"
        app:layout_constraintEnd_toStartOf="@id/buttonF"
        app:layout_constraintTop_toBottomOf="@id/buttonB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="290dp"/>

    <Button
        android:id="@+id/buttonF"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/f"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/buttonE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="290dp"/>

    <!-- "Pressed" TextView below buttons -->

    <TextView
        android:id="@+id/pressedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pressed"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/buttonD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- "Go" Button below "Pressed" TextView -->

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/pressedText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- "Additional" TextView below "Go" Button -->

    <TextView
        android:id="@+id/additionalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/additional_text"
        android:textSize="32sp"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/goButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- "Score" TextView at the bottom -->

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/score_0"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/additionalText" />
</androidx.constraintlayout.widget.ConstraintLayout>
